[workspace]
members = ["msg", "msg-socket", "msg-wire", "msg-transport", "msg-common"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.70"                                                                # Remember to update .clippy.toml and README.md
license = "MIT OR Apache-2.0"
description = "A flexible and lightweight messaging library for distributed systems"
authors = ["Jonas Bostoen", "Nicolas Racchi"]
homepage = "https://github.com/chainbound/msg-rs"
repository = "https://github.com/chainbound/msg-rs"

[workspace.dependencies]
msg-wire = { path = "./msg-wire" }
msg-socket = { path = "./msg-socket" }
msg-transport = { path = "./msg-transport" }
msg-common = { path = "./msg-common" }

# async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
parking_lot = "0.12"
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

bytes = "1"
thiserror = "1"
tracing = "0.1"
rand = "0.8"

# performance
rustc-hash = "1"
flate2 = "1"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.maxperf]
inherits = "release"
debug = false
lto = true
codegen-units = 1
opt-level = 3

[profile.debug-maxperf]
inherits = "maxperf"
debug = true
