[workspace]
members = [
    "msg",
    "msg-socket",
    "msg-wire",
    "msg-transport",
    "msg-common",
    "msg-sim",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.70"                                                                # Remember to update .clippy.toml and README.md
license = "MIT"
description = "A flexible and lightweight messaging library for distributed systems"
authors = ["Jonas Bostoen", "Nicolas Racchi"]
homepage = "https://github.com/chainbound/msg-rs"
repository = "https://github.com/chainbound/msg-rs"
keywords = ["messaging", "distributed", "systems", "networking", "quic", "quinn", "tokio", "async", "simulation", "pnet", "udp", "tcp", "socket"]

[workspace.dependencies]
msg-wire = { path = "./msg-wire" }
msg-socket = { path = "./msg-socket" }
msg-transport = { path = "./msg-transport" }
msg-common = { path = "./msg-common" }
msg-sim = { path = "./msg-sim" }

# async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
parking_lot = "0.12"


# general
bytes = "1"
thiserror = "1"
tracing = "0.1"
rustc-hash = "1"
rand = "0.8"

# NETWORKING
quinn = "0.10"
# rustls needs to be the same version as the one used by quinn
rustls = { version = "0.21", features = ["quic", "dangerous_configuration"] }
rcgen = "0.12"
flate2 = "1"
zstd = "0.13"
snap = "1"

# benchmarking & profiling
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

# simulation
pnet = "0.34"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.maxperf]
inherits = "release"
debug = false
lto = true
codegen-units = 1
opt-level = 3

[profile.debug-maxperf]
inherits = "maxperf"
debug = true
