[package]
name = "linkem"
version = "0.2.1"
description = "A realistic network emulation library"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
msg-socket.workspace = true
msg-transport.workspace = true

nix.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
rtnetlink = { version = "0.20.0" }

[dev-dependencies]
bytes.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "net",
] }


[[example]]
name = "pubsub_latency_probe"

[[example]]
name = "bdp_throughput"

[[example]]
name = "sim_multi_region"

[[example]]
name = "tcp_tuning"
