[package]
name = "msg-common"
description = "Common functions and types for the msg crates"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
