[package]
name = "msg-common"
description = "Common functions and types for the msg crates"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rand.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
derive_more.workspace = true
tracing.workspace = true
