[package]
name = "msg-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet.workspace = true
nix.workspace = true
thiserror.workspace = true
tracing.workspace = true
derive_more.workspace = true
tokio.workspace = true
futures.workspace = true
rtnetlink = { version = "0.19.0" }


[dev-dependencies]
tracing-subscriber = "0.3"
