[package]
name = "msg-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
msg-socket.workspace = true
msg-transport.workspace = true

nix.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
rtnetlink = { version = "0.20.0" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "net",
] }

[[example]]
name = "sim_multi_region"
path = "examples/sim_multi_region.rs"
