[package]
name = "msg-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# msg
msg-wire.workspace = true
msg-transport.workspace = true

bytes.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true
rand.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tracing-subscriber = "0.3"
