[package]
name = "msg-socket"
description = "Sockets for msg-rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# msg
msg-wire.workspace = true
msg-transport.workspace = true
msg-common.workspace = true

bytes.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
parking_lot.workspace = true

[dev-dependencies]
rand.workspace = true

msg-sim.workspace = true

tracing-subscriber = "0.3"
