[package]
name = "msg-transport"
description = "Transports for msg-rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
msg-common.workspace = true

async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true

libc.workspace = true

thiserror = { workspace = true, optional = true }
derive_more = { workspace = true, features = [
    "from",
    "into",
    "deref",
    "deref_mut",
], optional = true }

# QUIC
quinn = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }

# TLS
openssl = { workspace = true, optional = true }
tokio-openssl = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"

[features]
default = []
quic = ["dep:quinn", "dep:rcgen", "dep:thiserror"]
tcp-tls = [
    "dep:openssl",
    "dep:derive_more",
    "dep:thiserror",
    "dep:tokio-openssl",
]
