[package]
name = "msg-wire"
description = "Wire formats for msg-rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
