[package]
name = "msg-wire"
description = "Wire formats for msg-rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
msg-common.workspace = true

bytes.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tracing.workspace = true
flate2.workspace = true
zstd.workspace = true
snap.workspace = true
