[package]
name = "msg-wire"
description = "Wire formats for msg-rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
msg-common.workspace = true

bytes.workspace = true
thiserror.workspace = true
tokio-util.workspace = true

flate2 = "1"
zstd = "0.13"
snap = "1"
lz4_flex = "0.12"
