[package]
name = "msg"

description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
msg-socket.workspace = true
msg-transport.workspace = true
msg-wire.workspace = true

tokio.workspace = true
bytes.workspace = true
tokio-stream.workspace = true

turmoil = { version = "0.5.8", optional = true }

[dev-dependencies]
# benchmarking
tracing-subscriber = "0.3"
# Add jemalloc for extra perf on Linux systems.
[target.'cfg(all(not(windows), not(target_env = "musl")))'.dependencies]
jemallocator = { version = "0.5.0", features = ["profiling"] }
futures.workspace = true
tracing.workspace = true
rand.workspace = true
criterion.workspace = true
pprof.workspace = true

[features]
turmoil = ["dep:turmoil"]

[[bench]]
name = "reqrep"
harness = false

[[bench]]
name = "pubsub"
harness = false
