[package]
name = "msg"

description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
msg-socket.workspace = true
msg-transport.workspace = true
msg-wire.workspace = true

tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
bytes.workspace = true
tracing-subscriber = "0.3"
divan = "0.1"
futures.workspace = true
tracing.workspace = true
rand.workspace = true
criterion.workspace = true
pprof.workspace = true
openssl.workspace = true

[features]
default = []
quic = ["msg-transport/quic"]
tcp-tls = ["msg-transport/tcp-tls"]


# Add jemalloc for extra perf on Linux systems.
[target.'cfg(all(not(windows), not(target_env = "musl")))'.dependencies]
jemallocator = { version = "0.5.0", features = ["profiling"] }

[[bench]]
name = "reqrep"
harness = false

[[bench]]
name = "pubsub"
harness = false
