[package]
name = "msg"

description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
msg-socket.workspace = true
msg-transport.workspace = true
msg-wire.workspace = true

[dev-dependencies]
bytes.workspace = true
tracing-subscriber = "0.3"
futures.workspace = true
tracing.workspace = true
rand.workspace = true
criterion.workspace = true
pprof.workspace = true
openssl.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# Add jemalloc for extra perf on Linux systems.
[target.'cfg(all(not(windows), not(target_env = "musl")))'.dev-dependencies]
jemallocator = { version = "0.5.0", features = ["profiling"] }

[features]
default = []
quic = ["msg-transport/quic"]
tcp-tls = ["msg-transport/tcp-tls"]

[[bench]]
name = "reqrep"
harness = false
required-features = ["tcp-tls"]

[[bench]]
name = "pubsub"
harness = false
required-features = ["quic"]

[[example]]
name = "quic_vs_tcp"
required-features = ["quic"]

[[example]]
name = "reqrep_mtls"
required-features = ["tcp-tls"]
